# Tydniovy-Smachna-Bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker.yml
src/: bot.py  config.py  database.py  sheets.py  utils.py
